Adding core team and mailing list registration.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,34 @@ introText: |
 </p>
 
 </div>
-
+<h3>JS and Robots You Say? Preposterous!</h3>
+<p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p> 
 
 <h3>Join the Community</h3>
-<p>Want to hack on your drone, but no event in sight? Come and hang out in the
+<p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and hang out in the
 <code>#nodebots</code> IRC channel on freenode.net! Also follow the <a href="https://twitter.com/nodebots">twitter feed</a> for event updates.</p>
-<!-- <p>Also, make sure to be the first to find out about new events:</p> -->
 
-<!-- CreateSend form -->
 
+
+ <p>Also, make sure to be the first to find out about new events:</p> 
+<!-- Begin MailChimp Signup Form -->
+<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="http://jsconf.us2.list-manage.com/subscribe/post?u=0ce5e6406b5d3c47046a3b385&amp;id=09c06ec4ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+    
 
 <h3>WAT?</h3>
 <p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns nearby to create amazing robotic devices.</p>
