--- a/index.html
+++ b/index.html
@@ -55,3 +55,9 @@ introText: |
 
 <p>Install <a href="http://nodejs.org/">Node.js</a> and get the <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> module. You need to have an Arduino programmed with Firmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>. Once that is complete, you can now start hacking hardware like a champion! NodeBots makes the process of programming hardware circuitry very similar to how one would program a modern web page. Seriously, it is that easy!</p>
 <script src="https://gist.github.com/voodootikigod/5374512.js"></script>
++
++<video controls>
++  <source src="http://dl.dropbox.com/u/3531958/led-strobe.mp4">
++  <source src="http://dl.dropbox.com/u/3531958/led-strobe.ogv">
++  <source src="http://dl.dropbox.com/u/3531958/led-strobe.webm">
++</video>
