--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@ introText: |
 		<img src="img/jsconfus-location.png" alt="JSConf US 2013"/>
 	</a>
 </p>
-
 </div>
+
+<h3>Sumo Competition</h3>
+<p>At JSConf 2013 we're having a Sumo Competition, <a href="/sumo.html">these are the rules</a>.</p>
+
 <h3>JS and Robots You Say? Preposterous!</h3>
-<p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p> 
+<p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p>
 
 <h3>Join the Community</h3>
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and hang out in the
