Title for the sumo page

--- a/sumo.html
+++ b/sumo.html
@@ -4,6 +4,8 @@ title: NodeBots Core Team
 introTitle: Your NodeBot Experts
 ---
 
+<h2>Sumo Competition Rules</h2>
+
 <h3>Dimensions</h3>
 <p>Sumo bots must fit into an 6"x6"x6" cube. The "arena" will be a 3'-diameter circle on a flat surface.</p>
 
