Soup up the Sumo page a bit

--- a/sumo.html
+++ b/sumo.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: NodeBots Core Team
-introTitle: Your NodeBot Experts
+title: Sumo Rules
+introTitle: Two robots enter, One pushed out
 ---
 
 <h2>Sumo Competition Rules</h2>
@@ -13,13 +13,12 @@ introTitle: Your NodeBot Experts
 <ul>
   <li>Each match will consist of 3 rounds of 60 seconds each between 2 robots</li>
   <li>The winner of each match will compete against winners of other matches, until one robot is determined to be the Grand Champion Sumo Bot</li>
-  <li>Points are only valid during a given match; they do not roll over into subsequent matches (i.e. every bot starts each match with 0 points)</li>
   <li>While damage/destruction is inevitable, it is not encouraged. Robots that purposely attempt to ruin their competition will be put in timeout with a professional finger-wagger for the remainder of the competition.</li>
 </ul>
 
 <h3>Scoring</h3>
 <ul>
   <li>If a robot leaves the competition arena, the opposing robot wins the round</li>
-  <li>The first robot to win 2 rounds winds the match
-If neither robot wins the round, the match judge will choose the winner, based on something whimsical and/or random, probably style.</li>
+  <li>The first robot to win 2 rounds winds the match.</li>
+  <li>If neither robot wins the round, the match judge will choose the winner, based on something whimsical and/or random, probably style.</li>
 </ul>
