Move jsconf to past events, long live robotconf! (what's the url? I'm on a plane)

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 layout: default
 title: NodeBots - The Rise of JS Robotics
 introTitle: Hack Hardware With JS
-introText: |
-  A full day of building and controlling <strong>robots</strong> with<br>
-  node.js, started at JSConf on May 30 2013.
 ---
 
-<div id='upcoming'>
+<div class="events">
 
-<h3>Upcoming Events</h3>
-<p>
-	<a href="http://2013.jsconf.us/schedule">
-		<img src="img/jsconfus-location.png" alt="JSConf US 2013"/>
-	</a>
-</p>
+  <h3>Upcoming Events</h3>
+
+  <a href="#">RobotConf</a>
+
+  <h3>Past Events</h3>
+  <p>
+    <a href="/nodeconf2013.html">
+      <img src="img/jsconfus-location.png" alt="JSConf US 2013"/>
+    </a>
+  </p>
 </div>
 
 <h3>Sumo Competition</h3>
@@ -29,7 +30,7 @@ introText: |
 
 
 
- <p>Also, make sure to be the first to find out about new events:</p> 
+ <p>Also, make sure to be the first to find out about new events:</p>
 <!-- Begin MailChimp Signup Form -->
 <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -47,7 +48,7 @@ introText: |
 
 <!--End mc_embed_signup-->
 
-    
+
 
 <h3>WAT?</h3>
 <p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns nearby to create amazing robotic devices.</p>
