Robots Conf link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ introTitle: Hack Hardware With JS
 
   <h3>Upcoming Events</h3>
 
-  <a href="#">RobotConf</a>
+  <a href="http://robotsconf.com/">RobotsConf'13</a>
 
   <h3>Past Events</h3>
   <p>
