Reorder the index page, include the jsconf2013 post

--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@ title: NodeBots - The Rise of JS Robotics
 introTitle: Hack Hardware With JS
 ---
 
-<div class="events">
+<div class="flash">Read the <a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a>!</div>
 
-  <h3>Upcoming Events</h3>
+<h3>What's a Nodebot?</h3>
+<p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns and parts nearby to create amazing robotic devices.</p>
 
-  <a href="http://robotsconf.com/">RobotsConf'13</a>
-
-  <h3>Past Events</h3>
-  <p>
-    <a href="/nodeconf2013.html">
-      <img src="img/jsconfus-location.png" alt="JSConf US 2013"/>
-    </a>
-  </p>
-</div>
-
-<h3>Sumo Competition</h3>
-<p>At JSConf 2013 we're having a Sumo Competition, <a href="/sumo.html">these are the rules</a>.</p>
+<p>At a NodeBots event, teams of up to 3 people hack together Arduino based robots and program it all using just JavaScript! If you have no idea what an LED is or a resistor for that matter, have no fear - NodeBot experts will be readily available to help you hardware hack, solder, and 3D print your way to a full fledged NodeBot.</p>
 
 <h3>JS and Robots You Say? Preposterous!</h3>
 <p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p>
+
+<div id="events">
+  <h3>Upcoming Events</h3>
+  <ul>
+    <li><a href="http://robotsconf.com/">RobotsConf'13</a> August 19th and 20th</li>
+  </ul>
+  <h3>Past Events</h3>
+  <ul>
+    <li><a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a></li>
+  </ul>
+</div>
+
+<h3>Sumo Competition</h3>
+<p>At JSConf 2013 we had a Sumo Competition <a href="/sumo.html">these were the rules</a>.</p>
 
 <h3>Join the Community</h3>
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and hang out in the
@@ -47,13 +51,6 @@ introTitle: Hack Hardware With JS
 </div>
 
 <!--End mc_embed_signup-->
-
-
-
-<h3>WAT?</h3>
-<p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns nearby to create amazing robotic devices.</p>
-
-<p>At a NodeBots event, teams of up to 3 people hack together Arduino based robots and program it all using just JavaScript! If you have no idea what an LED is or a resistor for that matter, have no fear - NodeBot experts will be readily available to help you hardware hack, solder, and 3D print your way to a full fledged NodeBot.</p>
 
 <h3>Programming a NodeBot is Easy</h3>
 
