It's all h2's on the index.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ introTitle: Hack Hardware With JS
 <p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns and parts nearby to create amazing robotic devices.</p>
 
 <p>At a NodeBots event, teams of up to 3 people hack together Arduino based robots and program it all using just JavaScript! If you have no idea what an LED is or a resistor for that matter, have no fear - NodeBot experts will be readily available to help you hardware hack, solder, and 3D print your way to a full fledged NodeBot.</p>
+<p>At the end of the day we'll have a <a href="/sumo.html">Sumo Competition</a> interlaced with project demos from anyone who wants to present.</p>
 
 <h3>JS and Robots You Say? Preposterous!</h3>
 <p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p>
@@ -25,13 +26,9 @@ introTitle: Hack Hardware With JS
   </ul>
 </div>
 
-<h3>Sumo Competition</h3>
-<p>At JSConf 2013 we had a Sumo Competition <a href="/sumo.html">these were the rules</a>.</p>
-
-<h3>Join the Community</h3>
+<h2>Join the Community</h2>
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and hang out in the
 <code>#nodebots</code> IRC channel on freenode.net! Also follow the <a href="https://twitter.com/nodebots">twitter feed</a> for event updates.</p>
-
 
 
  <p>Also, make sure to be the first to find out about new events:</p>
