added nodebots day links

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 title: NodeBots - The Rise of JS Robotics
 introTitle: Hack Hardware With JS
 ---
-
-<div class="flash">Read the <a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a>!</div>
+<div class="flash">Make robots in your corner of the world at
+  international <a
+    href="https://github.com/nodebots/nodebotsday">Nodebots Day!!!!</a></div>
 
 <h3>What's a Nodebot?</h3>
 <p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns and parts nearby to create amazing robotic devices.</p>
@@ -18,6 +19,8 @@ introTitle: Hack Hardware With JS
 <div id="events">
   <h3>Upcoming Events</h3>
   <ul>
+    <li><a href="https://github.com/nodebots/nodebotsday">Nodebots
+      Day</a> July 27th (worldwide)</li>
     <li><a href="http://robotsconf.com/">RobotsConf'13</a> December 6th and 7th</li>
   </ul>
   <h3>Past Events</h3>
