--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ introTitle: Hack Hardware With JS
   </ul>
 </div>
 
+<h2>Awesome Nodebots</h2>
+<p>Check out the <a href="/projects.html">gallery</a> of awesome nodebots that have been built with <a href="https://github.com/rwldrn/johnny-five">johnny-five</a>.
+
 <h2>Join the Community</h2>
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and hang out in the
 <code>#nodebots</code> IRC channel on freenode.net! Also follow the <a href="https://twitter.com/nodebots">twitter feed</a> for event updates.</p>
