removed random center closure tag that had no opening tag

--- a/core.html
+++ b/core.html
@@ -46,7 +46,7 @@ be contacted at: <a href="mailto:team@nodebots.io">team@nodebots.io</a>. If you 
 
 <div class='inventor'>
 <p>A Crazy Idea From:</p>
-<img src="/img/team/williams.jpg"></center>
+<img src="/img/team/williams.jpg">
 <p>
   Chris Williams<br>
   <a href="https://twitter.com/voodootikigod">@voodootikigod</a>
