more formatting and a change from single quotes to double for consistency

--- a/core.html
+++ b/core.html
@@ -38,7 +38,7 @@ introTitle: Your NodeBot Experts
 	</li>
 </ul>
 
-<div class='inventor'>
+<div class="inventor">
 	<p>A Crazy Idea From:</p>
 	<img src="/img/team/williams.jpg">
 	<p>
