--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ introTitle: Hack Hardware With JS
 	<form action="http://jsconf.us2.list-manage.com/subscribe/post?u=0ce5e6406b5d3c47046a3b385&amp;id=09c06ec4ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<label for="mce-EMAIL">Subscribe to our mailing list</label>
 		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-		<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		<div class="clear">
+			<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+		</div>
 	</form>
 </div>
 <!--End MailChimp Signup Form-->
