Start adding pics and youtube videos to the projects pages because this is a webpage and we can do that now.

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,10 @@ introTitle: Projects built with johnny-five
   <li>
     Richard Key <a href="http://twitter.com/busyrich">@busyrich</a>
     <ul>
-      <li>Arduino Attack! <a href="http://www.youtube.com/watch?v=1NalU4d7a20">Watch the Video</a> <a href="https://github.com/BusyRich/arduino-attack">View the Code</a></li>
+      <li>Arduino Attack!<br>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/1NalU4d7a20" frameborder="0" allowfullscreen></iframe><br>
+        <a href="https://github.com/BusyRich/arduino-attack">View the Code</a>
+      </li>
     </ul>
   </li>
   <li>
