--- a/projects.html
+++ b/projects.html
@@ -110,5 +110,10 @@ introTitle: Projects built with johnny-five
     <ul>
       <li>6WD Rover <a href="http://twitpic.com/a9t3rg">See a Picture</a></li>
     </ul>
-  </li>
+    </li>
+    Sara Chipps <a href="https://twitter.com/sarajchipps">@sarajchipps</a>
+      <ul>
+        <li>Lights that change color based on your Twitter sentiment <a href="http://www.youtube.com/watch?v=ws7svZuq29c">Watch the Video</a> <a href="https://github.com/SaraJo/twitter-ring">View the Code</a></li>
+      </ul>
+      </li>
 </ul>
