--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@ introTitle: Projects built with johnny-five
       <li>6WD Rover <a href="http://twitpic.com/a9t3rg">See a Picture</a></li>
     </ul>
     </li>
-    Sara Chipps <a href="https://twitter.com/sarajchipps">@sarajchipps</a>
+    <li>Sara Chipps <a href="https://twitter.com/sarajchipps">@sarajchipps</a>
       <ul>
         <li>Lights that change color based on your Twitter sentiment <a href="http://www.youtube.com/watch?v=ws7svZuq29c">Watch the Video</a> <a href="https://github.com/SaraJo/twitter-ring">View the Code</a></li>
       </ul>
