--- a/projects.html
+++ b/projects.html
@@ -110,10 +110,15 @@ introTitle: Projects built with johnny-five
     <ul>
       <li>6WD Rover <a href="http://twitpic.com/a9t3rg">See a Picture</a></li>
     </ul>
-    </li>
-    <li>Sara Chipps <a href="https://twitter.com/sarajchipps">@sarajchipps</a>
-      <ul>
-        <li>Lights that change color based on your Twitter sentiment <a href="http://www.youtube.com/watch?v=ws7svZuq29c">Watch the Video</a> <a href="https://github.com/SaraJo/twitter-ring">View the Code</a></li>
-      </ul>
-      </li>
+  </li>
+  <li>Sara Chipps <a href="https://twitter.com/sarajchipps">@sarajchipps</a>
+    <ul>
+      <li>Lights that change color based on your Twitter sentiment <a href="http://www.youtube.com/watch?v=ws7svZuq29c">Watch the Video</a> <a href="https://github.com/SaraJo/twitter-ring">View the Code</a></li>
+    </ul>
+  </li>
+  <li>Blaine Bublitz <a href="https://twitter.com/BlaineBublitz">@BlaineBublitz</a>
+    <ul>
+      <li>Google Glass Controller for AR Drone (international nodebots day) <a href="http://vimeo.com/71405845">Watch the Video</a> <a href="https://github.com/phated/glass-drone">View the Code</a> <a href="http://blog.iceddev.com/2013-07-30-controlling-drones-with-google-glass-and-javascript.html">Read the Blog</a></li>
+    </ul>
+  </li>
 </ul>
