Add links to meetups and tweek css for readability

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@ layout: default
 title: NodeBots - The Rise of JS Robotics
 introTitle: Hack Hardware With JS
 ---
-<div class="flash">Make robots in your corner of the world at international <a href="https://github.com/nodebots/nodebotsday">Nodebots Day!!!!</a></div>
-
 <h3>What's a Nodebot?</h3>
 <p>NodeBots are robots that are controlled by node.js. A NodeBots event is a full day event where JS developers team up in groups of 3 with soldering guns and parts nearby to create amazing robotic devices.</p>
 
@@ -15,13 +13,30 @@ introTitle: Hack Hardware With JS
 <p>No seriously, you can build and control robots even if your only programming experience is intro to jQuery and a very simple web page. NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community. <a href="http://www.twitter.com/voodootikigod">Chris Williams</a> created a module called <a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> that allows JS developers to begin controlling and directing the physical world. From there, hardware and hardware talks have been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the <a href="http://voodootikigod.com/nodebots-the-rise-of-js-robotics/">rise of JS Robotics</a></p>
 
 <div id="events">
+  <h3>NodeBots Near You</h3>
+  <p>Find a meetup or start your own!</p>
+  <ul>
+    <li>
+      <a href="http://nodebotsmed.tumblr.com/">NodeBots Medellín</a> - Colombia
+    </li>
+    <li>
+      <a href="http://www.meetup.com/NodeBots-of-London">NodeBots of London</a> - UK
+    </li>
+    <li>
+      <a href="http://www.meetup.com/nodebots/">NodeBots NYC</a> - USA
+    </li>
+    <li>
+      <a href="http://lanyrd.com/2013/nodebotssf/">NodeBots SF</a> - USA
+    </li>
+  </ul>
   <h3>Upcoming Events</h3>
   <ul>
-    <li><a href="https://github.com/nodebots/nodebotsday">Nodebots Day</a> July 27th (worldwide)</li>
-    <li><a href="http://robotsconf.com/">RobotsConf'13</a> December 6th and 7th</li>
+    <li><a href="http://lanyrd.com/2013/nodebotssf/">Nodebots SF Meetup</a> - Oct 16th</li>
+    <li><a href="http://robotsconf.com/">RobotsConf'13</a> - December 6th and 7th</li>
   </ul>
   <h3>Past Events</h3>
   <ul>
+    <li><a href="https://github.com/nodebots/nodebotsday">Nodebots Day</a> - July 27th (worldwide)</li>
     <li><a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a></li>
   </ul>
 </div>
