Added a couple future meetups

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ introTitle: Hack Hardware With JS
   </ul>
   <h3>Upcoming Events</h3>
   <ul>
+    <li><a href="http://www.meetup.com/NodeBots-of-London/events/146831462/">NodeBots of London meetup</a> -  November 9th</li>
+    <li><a href="http://lanyrd.com/2013/nodebotssf-november/">Nodebots SF Meetup</a> - November 20th</li>
     <li><a href="http://robotsconf.com/">RobotsConf'13</a> - December 6th and 7th</li>
   </ul>
   <h3>Past Events</h3>
