added NodeBots Guatemala group, moved some events from upcoming to past, added NodeBotsSF and NodeBots Guatemala January meetups in upcoming events

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ introTitle: Hack Hardware With JS
   <p>Find a meetup or start your own!</p>
   <ul>
     <li>
+      <a href="http://nodebotsgt.tumblr.com/">NodeBots Guatemala</a> - Guatemala
+    </li>    
+    <li>
       <a href="http://nodebotsmed.tumblr.com/">NodeBots Medellín</a> - Colombia
     </li>
     <li>
@@ -31,15 +34,17 @@ introTitle: Hack Hardware With JS
   </ul>
   <h3>Upcoming Events</h3>
   <ul>
-    <li><a href="http://www.meetup.com/NodeBots-of-London/events/146831462/">NodeBots of London meetup</a> -  November 9th</li>
-    <li><a href="http://lanyrd.com/2013/nodebotssf-november/">Nodebots SF Meetup</a> - November 20th</li>
-    <li><a href="http://robotsconf.com/">RobotsConf'13</a> - December 6th and 7th</li>
+    <li><a href="http://lanyrd.com/2014/nodebotssf/">Nodebots SF Meetup</a> - Jan 16th</li>
+    <li><a href="http://www.meetup.com/Innovation-Guatemala/events/159820802/">Nodebots Guatemala Meetup</a> - Jan 25th</li>
   </ul>
   <h3>Past Events</h3>
   <ul>
     <li><a href="https://github.com/nodebots/nodebotsday">Nodebots Day</a> - July 27th (worldwide)</li>
     <li><a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a></li>
     <li><a href="http://lanyrd.com/2013/nodebotssf/">Nodebots SF Meetup</a> - Oct 16th</li>
+    <li><a href="http://www.meetup.com/NodeBots-of-London/events/146831462/">NodeBots of London meetup</a> -  November 9th</li>
+    <li><a href="http://lanyrd.com/2013/nodebotssf-november/">Nodebots SF Meetup</a> - November 20th</li>
+    <li><a href="http://robotsconf.com/">RobotsConf'13</a> - December 6th and 7th</li>    
   </ul>
 </div>
 
