--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ introTitle: Hack Hardware With JS
       <a href="http://nodebotsmed.tumblr.com/">NodeBots Medellín</a> - Colombia
     </li>
     <li>
+      <a href="http://www.meetup.com/VillavicencioJS/">NodeBots Villavicencio</a> - Colombia
+    </li>
+    <li>
       <a href="http://www.meetup.com/NodeBots-of-London">NodeBots of London</a> - UK
     </li>
     <li>
