added paris to the list of nodebot's chapters

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ introTitle: Hack Hardware With JS
       <a href="http://www.meetup.com/NodeBots-of-London">NodeBots of London</a> - UK
     </li>
     <li>
+      <a href="http://www.meetup.com/Nodebots-Paris">Les NodeBots de Paris</a> - FR
+    </li>
+    <li>
       <a href="http://www.meetup.com/nodebots/">NodeBots NYC</a> - USA
     </li>
     <li>
