--- a/core.html
+++ b/core.html
@@ -5,7 +5,8 @@ introTitle: Your NodeBot Experts
 ---
 
 <p>The nodebots movement was created by a small team that organized the first NodeBots event in <a href="http://2013.jsconf.us/schedule">Amelia Island, May 30th 2013</a>.</p>
-<p>The core team also provides benevolent dictatorship/free advice for all events and can be contacted at: <a href="mailto:team@nodebots.io">team@nodebots.io</a>. If you are interested in setting up your own NodeBots event, please contact us directly!</p>
+<p>The core team also provides benevolent dictatorship/free advice for all events and can be contacted at:
+  <a href="mailto:team@nodebots.io">team@nodebots.io</a>. If you are interested in setting up your own NodeBots event, please contact us directly!</p>
 
 <ul class="team">
   <li>
