--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ introTitle: Robots powered by JavaScript
 </p>
 
 <p>There are regular NodeBots events around the world where people meet-up and hack together on Arduinos, Rasberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
-<p>If you have no idea how to use an LED, have no fear - NodeBot experts will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
+<p>If you have no idea how to use an LED, have no fear - <a href="/core.html">NodeBot experts</a> will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
 <p>At the end of the day we'll have a <a href="/sumo.html">Sumo Competition</a> interlaced with project demos from anyone who wants to present.</p>
 
 <h2 id="events">International NodeBots Day</h2>
 <p><strong>26/27 July 2014</strong> - <a href="https://github.com/nodebots/nodebotsday">NodeBots Day is back for 2014.</a>
   <br/>We'll join together across the world to create and learn.</p>
 <p>NodeBots Day is not a hackathon. There will be no prizes other than the satisfaction of making something awesome! There will be very little in the way of talks. We're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company. And JavaScript. Lots of JavaScript.</p>
-<p>Follow <a href="https://twitter.com/nodebotsday">@nodebotsday</a> for more info.</p>
+<p>Follow <a href="https://twitter.com/nodebotsday">@nodebotsday</a>, check the <a href="https://github.com/nodebots/nodebotsday">github</a>, or contact the <a href="/core.html">NodeBots team</a> for more info.</p>
 
 <h2>Find a meetup near you</h2>
 
@@ -118,9 +118,11 @@ introTitle: Robots powered by JavaScript
 <h2>Where do NodeBots come from?</h2>
 <p>
   NodeBots, the idea, was first conceived out of the increasing visibility of hardware creation and control within the upstart node.js community.
-  </p>
-  <p>
-    <a href="http://twitter.com/voodootikigod">Chris Williams</a> created a module called node-serialport that allows JS developers to begin controlling and directing the physical world. From there, hardware has been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots. Now its time to get everyone in on the action, now is time for the rise of JS Robotics
+</p>
+<p>
+  <a href="http://twitter.com/voodootikigod">Chris Williams</a> created a module called node-serialport that allows JS developers to begin controlling and directing the physical world.
+  From there, hardware has been the bright point of every JS conference event, dazzling audiences with everything from smoke machines to walking robots.
+  <strong>Now its time to get everyone in on the action. Now is time for the rise of JS Robotics.</strong>
 </p>
 
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
