Added Australian group

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ introTitle: Robots powered by JavaScript
     <a href="http://lanyrd.com/2013/nodebotssf/">NodeBots SF</a> - USA
   </li>
   <li>
+    <a href="http://nodebotsau.io">NodeBotsAu</a> - Australia
+  </li>
+  <li>
     or <a href="#join">start your own!</a>
   </li>
 </ul>
