Added links to forum, blog and subreddit

--- a/index.html
+++ b/index.html
@@ -78,9 +78,16 @@ introTitle: Robots powered by JavaScript
 <p>The <a href="projects.html">gallery</a> of nodebots exsits to show off your creations. It comes to us from Johny-Five's <a href="https://github.com/rwldrn/johnny-five/blob/master/awesome.md">awesome.md</a>. When you creare something cool you should submit a pull adding it to both documents.</p>
 
 <h2 id="join">Join the Community</h2>
-<p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet?
-  Come and hang out in the <code>#nodebots</code> IRC channel on freenode.net and follow the <a href="https://twitter.com/nodebots">twitter feed</a> for event updates.
-</p>
+<p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and join in with the community across the web:</p>
+
+<ul>
+  <li>IRC Channel: <code>#nodebots</code></li>
+  <li>Twitter Feed: <a href="https://twitter.com/nodebots">@nodebots</a></li>
+  <li>Forum: <a href="http://forums.nodebots.io/">forums.nodebots.io</a></li>
+  <li>Blog: <a href="http://blog.nodebots.io/">blog.nodebots.io</a></li>
+  <li>Subreddit: <a href="http://www.reddit.com/r/nodebots">reddit.com/r/nodebots</a> </li>
+</ul>
+
 <p>Also, make sure to be the first to find out about new events:
 </p>
   <!-- Begin MailChimp Signup Form -->
