--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ introTitle: Robots powered by JavaScript
   </li>
 </ul>
 
+  <h3>Incoming Events</h3>
+  <ul>
+    <li><a href="https://eventioz.com.ar/e/introduccion-a-la-programacion-de-hardware-con-jav">Nodebots Buenos Aires Meetup</a> - December 5th 2014</li>
+  </ul>
+
   <h3>Past Events</h3>
   <ul>
     <li><a href="https://github.com/nodebots/nodebotsday">Nodebots Day</a> - July 27th 2013 (worldwide)</li>
