--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ introTitle: Robots powered by JavaScript
     <a href="http://www.meetup.com/nodebots/">NodeBots NYC</a> - USA
   </li>
   <li>
-    <a href="http://lanyrd.com/2013/nodebotssf/">NodeBots SF</a> - USA
+    <a href="http://www.meetup.com/nodebotssf/">NodeBots SF</a> - USA
   </li>
   <li>
     <a href="http://nodebotsau.io">NodeBotsAu</a> - Australia
