Update upcoming events list in the homepage
Add Nodebots Montevideo to the list of upcoming events. Move
NodeBots Buenos Aires to the list of Past Events.

--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@ introTitle: Robots powered by JavaScript
 
   <h3>Incoming Events</h3>
   <ul>
-    <li><a href="https://eventioz.com.ar/e/introduccion-a-la-programacion-de-hardware-con-jav">Nodebots Buenos Aires Meetup</a> - December 5th 2014</li>
+    <li><a href="https://ti.to/sophilabs/nodebots-25th-jul-2015">Nodebots Montevideo</a> - July 25th 2015</li>
   </ul>
 
   <h3>Past Events</h3>
   <ul>
+    <li><a href="https://eventioz.com.ar/e/introduccion-a-la-programacion-de-hardware-con-jav">Nodebots Buenos Aires Meetup</a> - December 5th 2014</li>
     <li><a href="https://github.com/nodebots/nodebotsday">Nodebots Day</a> - July 27th 2013 (worldwide)</li>
     <li><a href="{% post_url 2013-05-02-jsconf2013 %}">JSConf US 2013 Recap</a></li>
     <li><a href="http://lanyrd.com/2013/nodebotssf/">Nodebots SF Meetup</a> - Oct 16th 2013</li>
