Add Montevideo to the map in the landing page.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@ introTitle: Robots powered by JavaScript
     {coords:[  48.85,   2.35], name: "Les NodeBots de Paris", url:"http://www.meetup.com/Nodebots-Paris"},
     {coords:[ -37.81, 144.96], name: "NodeBots Melbourne, Australia", url:"http://www.eventbrite.com.au/e/nodebots-day-melbourne-july-2014-tickets-12121105553"},
     {coords:[ -33.86, 151.20], name: "NodeBots Sydney, Australia", url:"https://ti.to/nbdau/nodebots-sydney-2014"},
-    {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"}
+    {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
+    {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015"}
   ]
 
   meetups.map(function (m) {
