fixed typo in landing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ introTitle: Robots powered by JavaScript
   <img src="img/equation.png" alt="JS + Hardware = NodeBots"/>
 </p>
 
-<p>There are regular NodeBots events around the world where people meet-up and hack together on Arduinos, Rasberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
+<p>There are regular NodeBots events around the world where people meet-up and hack together on Arduinos, Raspberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
 <p>If you have no idea how to use an LED, have no fear - <a href="/core.html">NodeBot experts</a> will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
 <p>At the end of the day we'll have a <a href="/sumo.html">Sumo Competition</a> interlaced with project demos from anyone who wants to present.</p>
 
