--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ introTitle: Robots powered by JavaScript
     <a href="http://nodebotsau.io">NodeBotsAu</a> - Australia
   </li>
   <li>
+    <a href="http://www.meetup.com/pt/NodeBotsRec/">NodeBots Recife</a> - Brazil
+  </li>
+  <li>
     or <a href="#join">start your own!</a>
   </li>
 </ul>
@@ -181,6 +184,7 @@ introTitle: Robots powered by JavaScript
     {coords:[ -33.86, 151.20], name: "NodeBots Sydney, Australia", url:"https://ti.to/nbdau/nodebots-sydney-2014"},
     {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
     {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015"}
+    {coords:[ -8.032207, -34.870723], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec/"}
   ]
 
   meetups.map(function (m) {
