--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ introTitle: Robots powered by JavaScript
     {coords:[ -37.81, 144.96], name: "NodeBots Melbourne, Australia", url:"http://www.eventbrite.com.au/e/nodebots-day-melbourne-july-2014-tickets-12121105553"},
     {coords:[ -33.86, 151.20], name: "NodeBots Sydney, Australia", url:"https://ti.to/nbdau/nodebots-sydney-2014"},
     {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
-    {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015"}
+    {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015"},
     {coords:[ -8.032207, -34.870723], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec/"}
   ]
 
