Update nodebots day date in main text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ introTitle: Robots powered by JavaScript
 <p>At the end of the day we'll have a <a href="/sumo.html">Sumo Competition</a> interlaced with project demos from anyone who wants to present.</p>
 
 <h2 id="events">International NodeBots Day</h2>
-<p><strong>26/27 July 2014</strong> - <a href="https://github.com/nodebots/nodebotsday">NodeBots Day is back for 2014.</a>
+<p><strong>25 July 2015</strong> - <a href="https://github.com/nodebots/nodebotsday">NodeBots Day is back for 2015.</a>
   <br/>We'll join together across the world to create and learn.</p>
 <p>NodeBots Day is not a hackathon. There will be no prizes other than the satisfaction of making something awesome! There will be very little in the way of talks. We're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company. And JavaScript. Lots of JavaScript.</p>
 <p>Follow <a href="https://twitter.com/nodebotsday">@nodebotsday</a>, check the <a href="https://github.com/nodebots/nodebotsday">github</a>, or contact the <a href="/core.html">NodeBots team</a> for more info.</p>
