--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ introTitle: Robots powered by JavaScript
     {coords:[ -33.86, 151.20], name: "NodeBots Sydney, Australia", url:"https://ti.to/nbdau/nodebots-sydney-2014"},
     {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
     {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015/"},
-    {coords:[ -8.032207, -34.870723], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec"},
-    {coords:[ 32.8419225, -79.8689611], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"}
+    {coords:[ -8.03, -34.87], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec"},
+    {coords:[ 32.84, -79.86], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"}
   ]
 
   meetups.map(function (m) {
