--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ introTitle: Robots powered by JavaScript
     <a href="http://www.meetup.com/pt/NodeBotsRec/">NodeBots Recife</a> - Brazil
   </li>
   <li>
+    <a href="http://www.norfolkjs.org/">NodeBots Norfolk</a> - USA
+  </li>
+  <li>
     or <a href="#join">start your own!</a>
   </li>
 </ul>
