added buenos aires to the map

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ introTitle: Robots powered by JavaScript
     {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
     {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015/"},
     {coords:[ -8.03, -34.87], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec"},
-    {coords:[ 32.84, -79.86], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"}
+    {coords:[ 32.84, -79.86], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"},
+    {coords:[-34.5992296, -58.3695231], name: "NodeBots Buenos Aires", url:"http://nodebots.github.io/buenosaires/"}
   ]
 
   meetups.map(function (m) {
