--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ introTitle: Robots powered by JavaScript
     //        lat     lng
     {coords:[  13.9709564, -89.5748148], name: "NodeBots El Salvador, SV", url: "http://nodebots-sv.github.io/"},
     {coords:[  51.49, -0.093], name: "NodeBots of London", url: "http://www.meetup.com/NodeBots-of-London"},
-    {coords:[  40.48, -72.74], name: "NodeBots NYC", url: "http://www.meetup.com/NodeBots-of-London"},
+    {coords:[  40.7261734, -74.0071142], name: "NodeBots NYC", url: "http://www.meetup.com/nodebots/events/223090093/"},
     {coords:[  30.26, -97.74], name: "NodeBots Austin", url: "http://austinnodebots.com"},
     {coords:[   6.23, -75.57], name: "NodeBots Medellín", url: "http://nodebotsmed.tumblr.com/"},
     {coords:[ -33.92,  18.42], name: "NodeBots Cape Town", url: "https://twitter.com/nodebotscpt"},
