Added coords of nodebots Switzerland

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ introTitle: Robots powered by JavaScript
 
   var meetups = [
     //        lat     lng
+    {coords:[  47.499993, 8.750002], name: "NodeBots Switzerland", url: "http://www.nodebots.ch"},
     {coords:[  13.9709564, -89.5748148], name: "NodeBots El Salvador, SV", url: "http://nodebots-sv.github.io/"},
     {coords:[  51.49, -0.093], name: "NodeBots of London", url: "http://www.meetup.com/NodeBots-of-London"},
     {coords:[  40.7261734, -74.0071142], name: "NodeBots NYC", url: "http://www.meetup.com/nodebots/events/223090093/"},
