Adding Santiago de Chile

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ introTitle: Robots powered by JavaScript
     {coords:[ -8.03, -34.87], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec"},
     {coords:[ 32.84, -79.86], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"},
     {coords:[-34.5992296, -58.3695231], name: "NodeBots Buenos Aires", url:"http://nodebots.github.io/buenosaires/"},
-    {coords:[-30.1088701, -51.1769046], name: "NodeBotsDay Porto Alegre", url:"http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre"}
+    {coords:[-30.1088701, -51.1769046], name: "NodeBotsDay Porto Alegre", url:"http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre"},
+    {coords:[-33.4425368, -70.62611879999997], name: "NodeBots Santiago", url:"https://welcu.com/noderscl/nodebotsinternationaldaychile"}
   ]
 
   meetups.map(function (m) {
