--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ introTitle: Robots powered by JavaScript
     {coords:[-34.5992296, -58.3695231], name: "NodeBots Buenos Aires", url:"http://nodebots.github.io/buenosaires/"},
     {coords:[-30.1088701, -51.1769046], name: "NodeBotsDay Porto Alegre", url:"http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre"},
     {coords:[-33.4425368, -70.62611879999997], name: "NodeBots Santiago", url:"https://welcu.com/noderscl/nodebotsinternationaldaychile"},
-    {coords:[11.2239691, -74.186581], name: "NodeBots Santa Marta", url:"http://nodeschool.io/santamarta"}  
+    {coords:[11.2239691, -74.186581], name: "NodeBots UniMagdalena", url:"http://nodeschool.io/santamarta"}  
   ]
 
   meetups.map(function (m) {
